--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 include  ':doubletapplayerview'//, 'android-file-chooser'
 include ':file_operations',':nyBase',':nyApp'
-rootProject.name = "Player"
+rootProject.name = "nyPlayer"
