--- a/InternalLibs/nyMedia3Player/build.gradle
+++ b/InternalLibs/nyMedia3Player/build.gradle
@@ -7,7 +7,7 @@ android {
     android.buildFeatures.buildConfig true
     defaultConfig {
         minSdk 26
-        targetSdk 31
+        targetSdkVersion 34
         ndk {
             abiFilters "arm64-v8a"
         }
@@ -31,25 +31,24 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["lib-*.aar"])
     implementation 'androidx.appcompat:appcompat:1.4.1' //do not change
-    def media3_version = '1.2.0'
-    implementation "androidx.media3:media3-session:$media3_version"
-    implementation "androidx.media3:media3-datasource:$media3_version"
-    implementation "androidx.media3:media3-decoder:$media3_version"
-    implementation "androidx.media3:media3-common:$media3_version"
-    implementation "androidx.media3:media3-container:$media3_version"
-    implementation("androidx.media3:media3-exoplayer-dash:$media3_version") {
+    implementation "androidx.media3:media3-session:$rootProject.ext.media3_version"
+    implementation "androidx.media3:media3-datasource:$rootProject.ext.media3_version"
+    implementation "androidx.media3:media3-decoder:$rootProject.ext.media3_version"
+    implementation "androidx.media3:media3-common:$rootProject.ext.media3_version"
+    implementation "androidx.media3:media3-container:$rootProject.ext.media3_version"
+    implementation("androidx.media3:media3-exoplayer-dash:$rootProject.ext.media3_version") {
         exclude group: "androidx.media3", module: "media3-exoplayer"
     }
-    implementation("androidx.media3:media3-exoplayer-hls:$media3_version") {
+    implementation("androidx.media3:media3-exoplayer-hls:$rootProject.ext.media3_version") {
         exclude group: "androidx.media3", module: "media3-exoplayer"
     }
-    implementation("androidx.media3:media3-exoplayer-smoothstreaming:$media3_version") {
+    implementation("androidx.media3:media3-exoplayer-smoothstreaming:$rootProject.ext.media3_version") {
         exclude group: "androidx.media3", module: "media3-exoplayer"
     }
-    implementation("androidx.media3:media3-exoplayer-rtsp:$media3_version") {
+    implementation("androidx.media3:media3-exoplayer-rtsp:$rootProject.ext.media3_version") {
         exclude group: "androidx.media3", module: "media3-exoplayer"
     }
-    api 'com.squareup.okhttp3:okhttp:4.11.0'
+    api 'com.squareup.okhttp3:okhttp:4.12.0'
   /*  api "com.google.android.exoplayer:exoplayer-core:$rootProject.ext.exoplayer2Version"
     api "com.google.android.exoplayer:exoplayer-dash:$rootProject.ext.exoplayer2Version"
     api "com.google.android.exoplayer:exoplayer-hls:$rootProject.ext.exoplayer2Version"
@@ -66,6 +65,6 @@ dependencies {
     implementation project(":InternalLibs:core")
 
     //for trim
-    implementation 'com.github.iknow4:android-utils-sdk:1.1.2'
+   // implementation 'com.github.iknow4:android-utils-sdk:1.1.2'
 }
 
