--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
 
     ext {
         exoplayer2Version = '2.14.2'
+        media3_version = '1.5.0'
     }
     repositories {
         google()
